--- a/stdm/ui/ui_notif_item.ui
+++ b/stdm/ui/ui_notif_item.ui
@@ -1,165 +1,166 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
-    <class>frmNotificationItem</class>
-    <widget class="QWidget" name="frmNotificationItem">
-        <property name="geometry">
-            <rect>
-                <x>0</x>
-                <y>0</y>
-                <width>541</width>
-                <height>35</height>
-            </rect>
-        </property>
+ <class>frmNotificationItem</class>
+ <widget class="QWidget" name="frmNotificationItem">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>541</width>
+    <height>35</height>
+   </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Ignored">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>16777215</width>
+    <height>35</height>
+   </size>
+  </property>
+  <property name="windowTitle">
+   <string>Form</string>
+  </property>
+  <property name="styleSheet">
+   <string notr="true"/>
+  </property>
+  <layout class="QHBoxLayout" name="horizontalLayout_2">
+   <property name="spacing">
+    <number>2</number>
+   </property>
+   <property name="margin">
+    <number>2</number>
+   </property>
+   <item>
+    <widget class="QFrame" name="frame">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Ignored">
+       <horstretch>0</horstretch>
+       <verstretch>20</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="sizeIncrement">
+      <size>
+       <width>0</width>
+       <height>20</height>
+      </size>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(200, 200, 200);</string>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::Box</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Sunken</enum>
+     </property>
+     <property name="lineWidth">
+      <number>1</number>
+     </property>
+     <property name="midLineWidth">
+      <number>0</number>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <property name="margin">
+       <number>5</number>
+      </property>
+      <item>
+       <widget class="QLabel" name="lblNotifIcon">
         <property name="sizePolicy">
-            <sizepolicy hsizetype="Preferred" vsizetype="Ignored">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-            </sizepolicy>
+         <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="lblNotifMessage">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Ignored">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>20</width>
+          <height>20</height>
+         </size>
+        </property>
+        <property name="sizeIncrement">
+         <size>
+          <width>0</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>8</pointsize>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="cursor">
+         <cursorShape>ArrowCursor</cursorShape>
+        </property>
+        <property name="frameShape">
+         <enum>QFrame::NoFrame</enum>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="textFormat">
+         <enum>Qt::RichText</enum>
+        </property>
+        <property name="wordWrap">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="lblClose">
+        <property name="minimumSize">
+         <size>
+          <width>5</width>
+          <height>5</height>
+         </size>
         </property>
         <property name="maximumSize">
-            <size>
-                <width>16777215</width>
-                <height>35</height>
-            </size>
+         <size>
+          <width>12</width>
+          <height>12</height>
+         </size>
         </property>
-        <property name="windowTitle">
-            <string>Form</string>
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
         </property>
-        <property name="styleSheet">
-            <string notr="true"/>
+        <property name="toolTip">
+         <string>Close Message</string>
         </property>
-        <layout class="QHBoxLayout" name="horizontalLayout_2">
-            <property name="spacing">
-                <number>2</number>
-            </property>
-            <property name="margin">
-                <number>2</number>
-            </property>
-            <item>
-                <widget class="QFrame" name="frame">
-                    <property name="sizePolicy">
-                        <sizepolicy hsizetype="Preferred" vsizetype="Ignored">
-                            <horstretch>0</horstretch>
-                            <verstretch>20</verstretch>
-                        </sizepolicy>
-                    </property>
-                    <property name="sizeIncrement">
-                        <size>
-                            <width>0</width>
-                            <height>20</height>
-                        </size>
-                    </property>
-                    <property name="styleSheet">
-                        <string notr="true">background-color: rgb(200, 200, 200);</string>
-                    </property>
-                    <property name="frameShape">
-                        <enum>QFrame::Box</enum>
-                    </property>
-                    <property name="frameShadow">
-                        <enum>QFrame::Sunken</enum>
-                    </property>
-                    <property name="lineWidth">
-                        <number>1</number>
-                    </property>
-                    <property name="midLineWidth">
-                        <number>0</number>
-                    </property>
-                    <layout class="QHBoxLayout" name="horizontalLayout">
-                        <property name="margin">
-                            <number>5</number>
-                        </property>
-                        <item>
-                            <widget class="QLabel" name="lblNotifIcon">
-                                <property name="sizePolicy">
-                                    <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
-                                        <horstretch>0</horstretch>
-                                        <verstretch>0</verstretch>
-                                    </sizepolicy>
-                                </property>
-                                <property name="text">
-                                    <string/>
-                                </property>
-                            </widget>
-                        </item>
-                        <item>
-                            <widget class="QLabel" name="lblNotifMessage">
-                                <property name="sizePolicy">
-                                    <sizepolicy hsizetype="Expanding" vsizetype="Ignored">
-                                        <horstretch>0</horstretch>
-                                        <verstretch>0</verstretch>
-                                    </sizepolicy>
-                                </property>
-                                <property name="minimumSize">
-                                    <size>
-                                        <width>20</width>
-                                        <height>20</height>
-                                    </size>
-                                </property>
-                                <property name="sizeIncrement">
-                                    <size>
-                                        <width>0</width>
-                                        <height>0</height>
-                                    </size>
-                                </property>
-                                <property name="font">
-                                    <font>
-                                        <pointsize>6</pointsize>
-                                        <weight>75</weight>
-                                        <bold>true</bold>
-                                    </font>
-                                </property>
-                                <property name="cursor">
-                                    <cursorShape>ArrowCursor</cursorShape>
-                                </property>
-                                <property name="frameShape">
-                                    <enum>QFrame::NoFrame</enum>
-                                </property>
-                                <property name="text">
-                                    <string/>
-                                </property>
-                                <property name="textFormat">
-                                    <enum>Qt::RichText</enum>
-                                </property>
-                                <property name="wordWrap">
-                                    <bool>true</bool>
-                                </property>
-                            </widget>
-                        </item>
-                        <item>
-                            <widget class="QLabel" name="lblClose">
-                                <property name="minimumSize">
-                                    <size>
-                                        <width>5</width>
-                                        <height>5</height>
-                                    </size>
-                                </property>
-                                <property name="maximumSize">
-                                    <size>
-                                        <width>12</width>
-                                        <height>12</height>
-                                    </size>
-                                </property>
-                                <property name="cursor">
-                                    <cursorShape>PointingHandCursor</cursorShape>
-                                </property>
-                                <property name="toolTip">
-                                    <string>Close Message</string>
-                                </property>
-                                <property name="text">
-                                    <string/>
-                                </property>
-                                <property name="alignment">
-                                    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-                                </property>
-                                <property name="wordWrap">
-                                    <bool>false</bool>
-                                </property>
-                            </widget>
-                        </item>
-                    </layout>
-                </widget>
-            </item>
-        </layout>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+        </property>
+        <property name="wordWrap">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
-    <connections/>
+   </item>
+  </layout>
+ </widget>
+ <resources/>
+ <connections/>
 </ui>
