--- a/ui/ui_document_downloader_win.ui
+++ b/ui/ui_document_downloader_win.ui
@@ -335,47 +335,12 @@
              </property>
             </widget>
            </item>
-          </layout>
-         </widget>
-        </item>
-        <item>
-         <widget class="QGroupBox" name="groupBox_3">
-          <property name="minimumSize">
-           <size>
-            <width>0</width>
-            <height>60</height>
-           </size>
-          </property>
-          <property name="title">
-           <string>Data Source:</string>
-          </property>
-          <layout class="QHBoxLayout" name="horizontalLayout_7">
            <item>
-            <layout class="QHBoxLayout" name="horizontalLayout_6">
-             <item>
-              <widget class="QLabel" name="label_16">
-               <property name="text">
-                <string>Filename (CSV) :</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QLineEdit" name="edtUploadFile"/>
-             </item>
-             <item>
-              <widget class="QPushButton" name="btnUploadFile">
-               <property name="minimumSize">
-                <size>
-                 <width>0</width>
-                 <height>25</height>
-                </size>
-               </property>
-               <property name="text">
-                <string>Browse ...</string>
-               </property>
-              </widget>
-             </item>
-            </layout>
+            <widget class="QRadioButton" name="rbCSV">
+             <property name="text">
+              <string>File Names From CSV</string>
+             </property>
+            </widget>
            </item>
           </layout>
          </widget>
@@ -386,6 +351,9 @@
            <string>Local Documents Folder:</string>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_5">
+           <property name="spacing">
+            <number>6</number>
+           </property>
            <item>
             <layout class="QGridLayout" name="gridLayout">
              <item row="0" column="3">
@@ -512,24 +480,59 @@
                </property>
               </widget>
              </item>
-             <item row="4" column="0">
+            </layout>
+           </item>
+           <item>
+            <widget class="Line" name="line">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <layout class="QGridLayout" name="gridLayout_3">
+             <item row="1" column="0">
+              <widget class="QLabel" name="label_16">
+               <property name="text">
+                <string>Filename (CSV) :</string>
+               </property>
+              </widget>
+             </item>
+             <item row="4" column="1">
+              <widget class="QLineEdit" name="edtScannedSignature"/>
+             </item>
+             <item row="3" column="1">
+              <widget class="QLineEdit" name="edtScannedFamilyPhoto"/>
+             </item>
+             <item row="3" column="0">
               <widget class="QLabel" name="label_14">
                <property name="text">
                 <string>Family Photo:</string>
                </property>
               </widget>
              </item>
-             <item row="4" column="1">
-              <widget class="QLineEdit" name="edtScannedFamilyPhoto"/>
+             <item row="3" column="2">
+              <widget class="QCheckBox" name="cbScannedFamilyPhoto">
+               <property name="text">
+                <string>Upload</string>
+               </property>
+              </widget>
              </item>
-             <item row="4" column="3">
+             <item row="4" column="0">
+              <widget class="QLabel" name="label_15">
+               <property name="text">
+                <string>Signature:</string>
+               </property>
+              </widget>
+             </item>
+             <item row="3" column="3">
               <widget class="QToolButton" name="tbScannedFamilyPhoto">
                <property name="text">
                 <string>...</string>
                </property>
               </widget>
              </item>
-             <item row="4" column="4">
+             <item row="3" column="4">
               <widget class="QPushButton" name="btnScannedFamilyPhoto">
                <property name="text">
                 <string>Browse ...</string>
@@ -537,42 +540,41 @@
               </widget>
              </item>
              <item row="4" column="2">
-              <widget class="QCheckBox" name="cbScannedFamilyPhoto">
-               <property name="text">
-                <string>Upload</string>
-               </property>
-              </widget>
-             </item>
-             <item row="5" column="0">
-              <widget class="QLabel" name="label_15">
-               <property name="text">
-                <string>Signature:</string>
-               </property>
-              </widget>
-             </item>
-             <item row="5" column="1">
-              <widget class="QLineEdit" name="edtScannedSignature"/>
-             </item>
-             <item row="5" column="2">
               <widget class="QCheckBox" name="cbScannedSignature">
                <property name="text">
                 <string>Upload</string>
                </property>
               </widget>
              </item>
-             <item row="5" column="3">
+             <item row="4" column="3">
               <widget class="QToolButton" name="tbScannedSignature">
                <property name="text">
                 <string>...</string>
                </property>
               </widget>
              </item>
-             <item row="5" column="4">
+             <item row="4" column="4">
               <widget class="QPushButton" name="btnScannedSignature">
                <property name="text">
                 <string>Browse ...</string>
                </property>
               </widget>
+             </item>
+             <item row="1" column="4">
+              <widget class="QPushButton" name="btnUploadFile">
+               <property name="minimumSize">
+                <size>
+                 <width>0</width>
+                 <height>25</height>
+                </size>
+               </property>
+               <property name="text">
+                <string>Browse ...</string>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="1" colspan="3">
+              <widget class="QLineEdit" name="edtUploadFile"/>
              </item>
             </layout>
            </item>
