--- a/ui/ui_import_data.ui
+++ b/ui/ui_import_data.ui
@@ -99,10 +99,10 @@
        <string>Kobo Settings</string>
       </property>
       <layout class="QGridLayout" name="gridLayout_4">
-       <item row="1" column="0">
-        <widget class="QLabel" name="label_5">
+       <item row="2" column="0">
+        <widget class="QLabel" name="label_6">
          <property name="text">
-          <string>Kobo Username:</string>
+          <string>Kobo Password:</string>
          </property>
         </widget>
        </item>
@@ -120,10 +120,10 @@
          </property>
         </widget>
        </item>
-       <item row="2" column="0">
-        <widget class="QLabel" name="label_6">
+       <item row="0" column="0">
+        <widget class="QLabel" name="label_4">
          <property name="text">
-          <string>Kobo Password:</string>
+          <string>Media URL:</string>
          </property>
         </widget>
        </item>
@@ -134,10 +134,17 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="0">
-        <widget class="QLabel" name="label_4">
+       <item row="1" column="0">
+        <widget class="QLabel" name="label_5">
          <property name="text">
-          <string>Media URL:</string>
+          <string>Kobo Username:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="1">
+        <widget class="QCheckBox" name="cbSaveCredit">
+         <property name="text">
+          <string>Save Credentials</string>
          </property>
         </widget>
        </item>
