Configuration: Update UI/UX for DB/Configuration backup utitily
The action to open the backup folder has been moved to the query
dialog that pops-up when the backup finishes successfully.

--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="/plugins/stdm">
+    <file>images/icons/data_backup.png</file>
     <file>images/icons/mobile_collect.png</file>
     <file>images/icons/mobile_data_management.png</file>
     <file>images/icons/mobile_import.png</file>
@@ -107,7 +108,7 @@
     <file>images/icons/custom_tenure.png</file>
     <file>images/icons/advanced_search.png</file>
     <file>images/icons/expression.png</file>
-	<file>images/icons/qrcode.png</file>
-	<file>images/icons/qrcode_512.png</file>
+    <file>images/icons/qrcode.png</file>
+    <file>images/icons/qrcode_512.png</file>
   </qresource>
 </RCC>
