Profile Backup: Enhanced the Profile Backup Tool
Added a few enhancements on the profile backup tool:
  - Backup files are now done inside individual folders.
    The folder is named the same name as the database name
    that is been backed-up.
  - The log file for the backup (JSON file) is now written
    correctly.
  - The profile in the configuration file that is been backed-up
    is now displayed as a tree hierarchy (Profile->Entities->Templates)
  - Added support to backup templates of the current configuration

The patch also fixed minor issues related to changes in Qt5 API

--- a/stdm/ui/ui_db_profile_backup.ui
+++ b/stdm/ui/ui_db_profile_backup.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>522</width>
-    <height>356</height>
+    <width>554</width>
+    <height>478</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -57,17 +57,10 @@
        </property>
       </widget>
      </item>
-     <item row="3" column="1">
-      <widget class="QLabel" name="txtAdmin">
-       <property name="text">
-        <string>TextLabel</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="1">
-      <widget class="QLineEdit" name="edtAdminPassword">
-       <property name="echoMode">
-        <enum>QLineEdit::Password</enum>
+     <item row="5" column="1">
+      <widget class="QLineEdit" name="edtBackupFolder">
+       <property name="readOnly">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
@@ -75,13 +68,6 @@
       <widget class="QLabel" name="label_6">
        <property name="text">
         <string>Make ZIP Package:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="6" column="1">
-      <widget class="QCheckBox" name="cbCompress">
-       <property name="text">
-        <string/>
        </property>
       </widget>
      </item>
@@ -105,13 +91,6 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="1">
-      <widget class="QLabel" name="txtDBName">
-       <property name="text">
-        <string>TextLabel</string>
-       </property>
-      </widget>
-     </item>
      <item row="2" column="0">
       <widget class="QLabel" name="label_3">
        <property name="text">
@@ -119,32 +98,31 @@
        </property>
       </widget>
      </item>
-     <item row="5" column="1">
-      <widget class="QLineEdit" name="edtBackupFolder">
-       <property name="readOnly">
-        <bool>true</bool>
+     <item row="2" column="1">
+      <widget class="QLabel" name="txtDBName">
+       <property name="text">
+        <string>TextLabel</string>
        </property>
       </widget>
      </item>
-     <item row="1" column="0" colspan="2">
-      <widget class="QListWidget" name="lwProfiles">
-       <property name="maximumSize">
-        <size>
-         <width>16777215</width>
-         <height>100</height>
-        </size>
+     <item row="4" column="1">
+      <widget class="QLineEdit" name="edtAdminPassword">
+       <property name="echoMode">
+        <enum>QLineEdit::Password</enum>
        </property>
-       <property name="styleSheet">
-        <string notr="true">background-color: rgb(223, 223, 223);</string>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <widget class="QLabel" name="txtAdmin">
+       <property name="text">
+        <string>TextLabel</string>
        </property>
-       <property name="editTriggers">
-        <set>QAbstractItemView::NoEditTriggers</set>
-       </property>
-       <property name="selectionMode">
-        <enum>QAbstractItemView::NoSelection</enum>
-       </property>
-       <property name="selectionBehavior">
-        <enum>QAbstractItemView::SelectRows</enum>
+      </widget>
+     </item>
+     <item row="6" column="1">
+      <widget class="QCheckBox" name="cbCompress">
+       <property name="text">
+        <string/>
        </property>
       </widget>
      </item>
@@ -155,20 +133,19 @@
        </property>
       </widget>
      </item>
+     <item row="1" column="0" colspan="3">
+      <widget class="QTreeWidget" name="twProfiles">
+       <attribute name="headerVisible">
+        <bool>false</bool>
+       </attribute>
+       <column>
+        <property name="text">
+         <string notr="true">1</string>
+        </property>
+       </column>
+      </widget>
+     </item>
     </layout>
-   </item>
-   <item>
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
    </item>
    <item>
     <widget class="Line" name="line">
