Profile Backup: Get the DB backup file name from application
Backup script (batch file) now gets the fully formatted DB backup
file name from the application. Previously the file name was been
constructed inside the script and the behavior was not consistent
in different versions of Windows.

--- a/stdm/ui/ui_db_profile_backup.ui
+++ b/stdm/ui/ui_db_profile_backup.ui
@@ -157,6 +157,19 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
+      <widget class="QLabel" name="lblStatus">
+       <property name="font">
+        <font>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>TextLabel</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
