--- a/ui/ui_options.ui
+++ b/ui/ui_options.ui
@@ -39,8 +39,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>608</width>
-        <height>557</height>
+        <width>583</width>
+        <height>558</height>
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout_5">
@@ -267,7 +267,7 @@
          <item row="0" column="0">
           <widget class="QLabel" name="label">
            <property name="text">
-            <string>Set current profile</string>
+            <string>Set current profile XXX</string>
            </property>
           </widget>
          </item>
